Pre-upgrade: Save current state before Laravel 12 + Filament 4 upgrade

--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,53 @@ AUDIT_LOG_RETENTION_DAYS=90
 
 # Authentication
 AUTH_PASSWORD_TIMEOUT=10800
+
+# ============================================================================
+# SECURITY CONFIGURATION
+# ============================================================================
+
+# Security Headers
+SECURITY_X_FRAME_OPTIONS=SAMEORIGIN
+SECURITY_REFERRER_POLICY=strict-origin-when-cross-origin
+SECURITY_PERMISSIONS_POLICY="geolocation=(), microphone=(), camera=()"
+SECURITY_HSTS_ENABLED=false  # Set to true in production with valid SSL
+
+# Content Security Policy (CSP)
+SECURITY_CSP_ENABLED=true
+SECURITY_CSP_REPORT_ONLY=false  # Set to true for testing
+SECURITY_CSP_REPORT_URI=  # Optional: endpoint for CSP violation reports
+
+# Rate Limiting (Security-Sensitive Operations)
+SECURITY_INVOICE_FINALIZATION_ATTEMPTS=10
+SECURITY_INVOICE_FINALIZATION_DECAY=1
+SECURITY_LOGIN_ATTEMPTS=5
+SECURITY_LOGIN_DECAY=1
+SECURITY_PASSWORD_RESET_ATTEMPTS=3
+SECURITY_PASSWORD_RESET_DECAY=1
+
+# Audit Logging
+SECURITY_AUDIT_LOGGING_ENABLED=true
+SECURITY_AUDIT_LOG_CHANNEL=stack
+
+# Session Security
+SECURITY_SESSION_TIMEOUT_WARNING=5  # Minutes before session expiry
+
+# Demo Mode (Disable in production)
+SECURITY_DEMO_MODE_ENABLED=false
+
+# ============================================================================
+# PRODUCTION SECURITY CHECKLIST
+# ============================================================================
+# Before deploying to production, ensure:
+# - APP_DEBUG=false
+# - APP_ENV=production
+# - SESSION_SECURE_COOKIE=true
+# - SECURITY_HSTS_ENABLED=true
+# - SECURITY_CSP_ENABLED=true
+# - SECURITY_AUDIT_LOGGING_ENABLED=true
+# - SECURITY_DEMO_MODE_ENABLED=false
+# - Valid SSL certificate installed
+# - Firewall rules configured
+# - Database backups enabled
+# - Log monitoring active
+# ============================================================================
